--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">MAP524 Lab 2</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="hello_me">Hello UNIVERSE</string>
+    <string name="hello_me">Hello Everyone</string>
     <string name="action_settings">Settings</string>
 </resources>
